  to walk each reference sequence only once (instead of twice) in order to
  get the hits in both strands (+ and -).

o Removed the XStringList class and family.

o Moved the IRanges, UnlockedIRanges, LockedIRanges, NormalIRanges,
  MaskCollection, Views, and XInteger classes and their methods to the new
  IRanges package.

C-LEVEL FACILITIES

UTILITIES

o Added the uniqueLetters() generic function with methods for XString,
  XStringSet, XStringViews and MaskedXString objects.

o Added fasta.info() for fast extraction of the descriptions and lengths of
  the sequences stored in a FASTA file. Also renamed the 'strip.desc' argument
  of readFASTA() -> 'strip.descs'.

o Renamed replaceLetterAtLoc() -> replaceLetterAt() and renamed its 'loc'
  argument -> 'at'. Deprecated replaceLetterAtLoc().

o Added predefined 'RNA_GENETIC_CODE' object.

o Moved the utility functions for importing a mask (read.agpMask(),
  read.gapMask(), read.liftMask(), read.rmMask() and read.trfMask() functions)
  to the new IRanges package.

o Moved the generic functions for width(), shift(), restrict(), narrow(),
  reduce(), gaps(), reverse(), coverage(), subject(), views(), trim(), and
  subviews() to new IRanges package.

STRING MATCHING

o Added support for indels to matchPattern(), countPattern() and vcountPattern()
  (vmatchPattern() will follow as soon as MIndex objects support variable-width
  matches).

o Added the vmatchPattern() and vcountPattern() generic functions with
  methods for XStringSet objects. They are the vectorized versions of
  matchPattern()/countPattern() i.e. the subject must be an XStringSet
  object (support for XStringViews objects will follow soon).

o Addition of the 'dups0' slot to the ByPos_MIndex class: this allows a more
  compact representation in memory of a ByPos_MIndex object that holds the
  hits of a set of patterns that has a lot of duplicates. The benefit is
  really noticeable when the patterns that are highly represented in the