@@ -4,7 +4,7 @@ Title: String objects representing biological sequences, and matching
 Description: Memory efficient string containers, string matching
 	algorithms, and other utilities, for fast manipulation of large
 	biological sequences or set of sequences.
-Version: 2.11.3
+Version: 2.11.4
 Author: H. Pages, R. Gentleman, P. Aboyoun and S. DebRoy
 Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: SequenceMatching, Genetics, Infrastructure
@@ -36,6 +36,7 @@ Collate: 00datacache.R
 	alphabetFrequency.R
 	chartr.R
 	reverse.R
+	translate.R
 	toComplex.R
 	replaceLetterAt.R
 	injectHardMask.R
